# Voxel-C-

./: CMakeLists.txt
assets/shaders/: basic.frag  basic.vert  chunk.frag  chunk.vert  sky.frag  sky.vert
src/: main.cpp
src/Engine/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h  World.cpp  World.h
